--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
+    <!-- ✅ Cấu hình cơ bản -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sgu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>SGU SQL | Cổng thông tin sinh viên</title>
+    <meta
+      name="description"
+      content="SGU SQL - Cổng thông tin sinh viên SGU. Tra cứu lịch học, điểm số, thông báo và quản lý học tập một cách tiện lợi và hiện đại."
+    />
+
+    <!-- ✅ SEO và từ khóa -->
+    <meta
+      name="keywords"
+      content="SGU, SQL, Đại học Sài Gòn, sinh viên, portal, lịch học, điểm, GPA, React, Vite"
+    />
+    <meta name="author" content="SGU Development Team" />
+
+    <!-- ✅ Open Graph (khi chia sẻ lên mạng xã hội) -->
+    <meta property="og:title" content="SGU SQL | Cổng thông tin sinh viên" />
+    <meta
+      property="og:description"
+      content="Cổng thông tin sinh viên SGU — theo dõi lịch học, điểm, GPA và thông báo mới nhất."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url" content="https://sgusql.vercel.app/" />
+
+    <!-- ✅ Favicon & Icon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- ✅ Màu thanh trình duyệt (mobile) -->
+    <meta name="theme-color" content="#1e40af" />
+
+    <!-- ✅ Tối ưu font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    
   </head>
+
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- ✅ Hiển thị trong lúc React chưa mount -->
+      
+    </div>
+
+    <!-- ✅ Script React chính -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
