--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       content="Cổng thông tin sinh viên SGU — theo dõi lịch học, điểm, GPA và thông báo mới nhất."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:image" content="https://sgusql.vercel.app/preview.png" />
     <meta property="og:url" content="https://sgusql.vercel.app/" />
 
     <!-- ✅ Favicon & Icon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="icon" type="image/png" href="https://sgusql.vercel.app/logo.png" />
+    <link rel="apple-touch-icon" href="https://sgusql.vercel.app/logo.png" />
 
     <!-- ✅ Màu thanh trình duyệt (mobile) -->
     <meta name="theme-color" content="#1e40af" />
